--- a/job.html
+++ b/job.html
@@ -165,7 +165,7 @@
                                 <div class="dot"></div>
                                 <div class="pulse"></div>
                             </div>
-                            <img src="images/mouse.png" alt="鼠标">
+                            <img src="images/mouse.png" alt="鼠标1">
                         </div>
                     </div>
                     <img class="five-j ani"  swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/MARK.png" alt="MARK">
