--- a/job.html
+++ b/job.html
@@ -18,7 +18,7 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <!-- 第1屏-start -->
-          <!--   <div class="swiper-slide" >
+            <!--   <div class="swiper-slide" >
                 <div class="page-one">
                     <div class="activ-one ani"  swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s"><img src="images/job_a.png" alt="你是否具有？"></div>
                     <div class="one-box ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">
@@ -56,7 +56,7 @@
             </div> -->
             <!-- 第1屏-stop -->
             <!-- 第2屏-start -->
-           <!--  <div class="swiper-slide" >
+            <!--  <div class="swiper-slide" >
                 <div class="page-two">
                     <div class="two-a ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"><img src="images/two_a.png" alt="键盘"></div>
                     <div class="two-b ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"><img src="images/two_b.png" alt="谷歌浏览器"></div>
@@ -114,7 +114,7 @@
             </div> -->
             <!-- 第3屏-stop -->
             <!-- 第4屏-start -->
-             <!--   <div class="swiper-slide" >
+            <!--   <div class="swiper-slide" >
              <div class="page-four">
                     <img class="ani four-a"  swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/JQuery.png" alt="JQuery">
                     <img class="four-b ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/MySQL.png" alt="MySQL">
@@ -206,10 +206,8 @@
                 </div>
             </div> -->
             <!-- 第6屏-stop -->
-
-
             <!-- 第7屏-start -->
-            <div class="swiper-slide">
+            <!-- <div class="swiper-slide">
                 <div class="page-seven">
                     <img class="ani seven-a" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/seven_a.png" alt="分子">
                     <img class="ani seven-b" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/seven_b.png" alt="放大镜">
@@ -239,22 +237,36 @@
                  <div class="arrows-box">
                     <img src="images/arrows.png" class="arr-pic" alt="箭头">
                 </div>
-            </div>
+            </div> -->
             <!-- 第7屏-stop -->
-
-              <!-- 第8屏-start -->
+            <!-- 第8屏-start -->
             <div class="swiper-slide">
                 <div class="page-eight">
-                    <img class="ani six-a" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/eight_a.png" alt="">
-                   
+                    <img class="ani eight-a" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/eight_a.png" alt="编辑">
+                    <img class="ani eight-b" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/eight_b.png" alt="眼镜">
+                    <img class="ani eight-c" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/eight_c.png" alt="EDM">
+                    <img class="ani eight-d" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/WECHAT.png" alt="WECHAT">
+                    <img class="ani eight-e" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/NEWSLETTER.png" alt="NEWSLETTER">
+                    <img class="eight-f ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="2s" src="images/editor_peo.png" alt="内容编辑">
+                    <div class="txt-box ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.2s">
+                        <img class="three-i ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="2.8s" src="images/seo_txt.png" alt="SEO优化专员-文本">
+                        <a class="ani" href="joinus.html" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="3.6s"><img class="join-btn" src="images/two_h.png" alt="赶快投入我们的怀抱"></a>
+                        <div class="mouse-box ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="4.4s">
+                            <div class="container">
+                                <div class="dot"></div>
+                                <div class="pulse"></div>
+                            </div>
+                            <img src="images/mouse.png" alt="鼠标">
+                        </div>
+                    </div>
+                    <img class="ani eight-g" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/eight_f.png" alt="汽车">
+                      <img class="ani eight-h" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/eight_g.png" alt="箭头">
                 </div>
                 <div class="arrows-box">
                     <img src="images/arrows.png" class="arr-pic" alt="箭头">
                 </div>
             </div>
             <!-- 第8屏-stop -->
-
-
         </div>
     </div>
     <!-- Add Pagination -->
