--- a/job.html
+++ b/job.html
@@ -18,7 +18,7 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
             <!-- 第1屏-start -->
-            <!--   <div class="swiper-slide" >
+              <div class="swiper-slide" >
                 <div class="page-one">
                     <div class="activ-one ani"  swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.1s"><img src="images/job_a.png" alt="你是否具有？"></div>
                     <div class="one-box ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.6s">
@@ -53,10 +53,10 @@
                     </div>
                 </div>
                 <div class="arrows-box"><img src="images/arrows.png" class="arr-pic" alt="箭头"></div>
-            </div> -->
+            </div>
             <!-- 第1屏-stop -->
             <!-- 第2屏-start -->
-            <!--  <div class="swiper-slide" >
+             <div class="swiper-slide" >
                 <div class="page-two">
                     <div class="two-a ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"><img src="images/two_a.png" alt="键盘"></div>
                     <div class="two-b ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"><img src="images/two_b.png" alt="谷歌浏览器"></div>
@@ -81,10 +81,10 @@
                 <div class="arrows-box">
                     <img src="images/arrows.png" class="arr-pic" alt="箭头">
                 </div>
-            </div> -->
+            </div>
             <!-- 第2屏-stop -->
             <!-- 第3屏-start -->
-            <!-- <div class="swiper-slide" >
+            <div class="swiper-slide" >
                 <div class="page-three">
                     <div class="three-a ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"><img src="images/three_a.png" alt="AI"></div>
                     <div class="three-b ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s"><img src="images/three_e.png" alt="调色板"></div>
@@ -111,7 +111,7 @@
                 <div class="arrows-box">
                     <img src="images/arrows.png" class="arr-pic" alt="箭头">
                 </div>
-            </div> -->
+            </div>
             <!-- 第3屏-stop -->
             <!-- 第4屏-start -->
               <div class="swiper-slide" >
@@ -124,7 +124,7 @@
                     <img class="four-f ani"  swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/PHP.png" alt="PHP">
                     <img class="four-g ani"  swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/JavaScript.png" alt="JavaScript">
                     <img class="four-h ani"  swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="2s" src="images/php_peo.png" alt="php开发工程师">
-                    <div class="txt-box ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.2s">
+                    <div class="txt-box ani J-txtbox" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="1.2s">
                         <img class="three-i ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="2.3s" src="images/php_txt.png" alt="php开发工程师-文本">
                         <a class="ani" href="joinus.html" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="2.9s"><img class="join-btn" src="images/two_h.png" alt="赶快投入我们的怀抱"></a>
                         <div class="mouse-box ani" swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="3.5s">
@@ -144,14 +144,14 @@
             </div>
             <!-- 第4屏-stop -->
             <!-- 第5屏-start -->
-     <!--        <div class="swiper-slide" >
+            <div class="swiper-slide" >
                 <div class="page-five">
                     <img class="five-a ani" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/JQuery.png" alt="JQuery">
                     <img class="five-b ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/HTML5.png" alt="HTML5">
                     <img class="five-c ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/C.png" alt="C#">
                     <img class="five-d ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/SQL_Server.png" alt="SQL_Server">
                     <img class="five-e ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/Cadd.png" alt="c++">
-                    <img class="five-f ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/Cadd.png" alt="c++">
+                    
                     <img class="five-g ani" swiper-animate-effect="fadeInRight" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/DIV.png" alt="div_css">
                     <img class="five-h ani" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/ASP.png" alt="ASP">
                     <img class="five-i ani"  swiper-animate-effect="bounceIn" swiper-animate-duration="0.5s" swiper-animate-delay="2s" src="images/net_peo.png" alt=".net开发工程师">
@@ -173,10 +173,10 @@
                 <div class="arrows-box">
                     <img src="images/arrows.png" class="arr-pic" alt="箭头">
                 </div>
-            </div> -->
+            </div>
             <!-- 第5屏-stop -->
             <!-- 第6屏-start -->
-<!--             <div class="swiper-slide" >
+            <div class="swiper-slide" >
                 <div class="page-six">
                     <img class="ani six-a" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/Web_Service.png" alt="webserver">
                     <img class="ani six-b" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/xml.png" alt="xml">
@@ -204,10 +204,10 @@
                 <div class="arrows-box">
                     <img src="images/arrows.png" class="arr-pic" alt="箭头">
                 </div>
-            </div> -->
+            </div>
             <!-- 第6屏-stop -->
             <!-- 第7屏-start -->
-     <!--        <div class="swiper-slide">
+            <div class="swiper-slide">
                 <div class="page-seven">
                     <img class="ani seven-a" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/seven_a.png" alt="分子">
                     <img class="ani seven-b" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/seven_b.png" alt="放大镜">
@@ -237,10 +237,10 @@
                  <div class="arrows-box">
                     <img src="images/arrows.png" class="arr-pic" alt="箭头">
                 </div>
-            </div> -->
+            </div>
             <!-- 第7屏-stop -->
             <!-- 第8屏-start -->
-            <!-- <div class="swiper-slide">
+            <div class="swiper-slide">
                 <div class="page-eight">
                     <img class="ani eight-a" swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/eight_a.png" alt="编辑">
                     <img class="ani eight-b" swiper-animate-effect="fadeInLeft" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/eight_b.png" alt="眼镜">
@@ -265,13 +265,14 @@
                 <div class="arrows-box">
                     <img src="images/arrows.png" class="arr-pic" alt="箭头">
                 </div>
-            </div> -->
+            </div>
             <!-- 第8屏-stop -->
         </div>
     </div>
     <!-- Add Pagination -->
     <!-- <div class="swiper-pagination"></div> -->
     </div>
+    <script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
     <script src="js/swiper.animate1.0.3.min.js" type="text/javascript"></script>
     <script src="js/swiper.min.js" type="text/javascript"></script>
     <script>
@@ -290,6 +291,14 @@
             slideChangeTransitionEnd: function() {
                 swiperAnimate(this); //每个slide切换结束时也运行当前slide动画
             }
+        }
+    });
+
+    $(function(){
+        var win_h = $(window).height();
+        // alert(win_h);
+        if(win_h <= 570){
+            // $('.J-txtbox').css('property', 'value');
         }
     });
     </script>
