--- a/about.html
+++ b/about.html
@@ -7,67 +7,65 @@
     <meta content="black" name="apple-mobile-web-app-status-bar-style" />
     <meta content="telephone=no" name="format-detection" />
     <title>关于港迅</title>
+    <link rel="stylesheet" type="text/css" href="css/animate.min.css">
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
-	<div class="about-box">
-		<div class="txt-box">
-			<ul>
-				<li class="tit-li">
-					<img class="big-txt" src="images/tit_txt.png" alt="">
-				</li>
-				<li class="first-words">
-					<img class="small-txt" src="images/tit_1.png" alt="">
-				</li>
-				<li class="second-words">
-					<img class="small-txt" src="images/tit_2.png" alt="">
-				</li>
-				<li class="third-words">
-					<img class="small-txt" src="images/tit_3.png" alt="">
-				</li>
-				<li class="four-words">
-					<img class="small-txt" src="images/tit_4.png" alt="">
-				</li>
-				<li  class="five-words">
-					<img class="small-txt" src="images/tit_5.png" alt="">
-				</li>
-				<li class="six-words">
-					<img class="small-txt" src="images/tit_6.png" alt="">
-				</li>
-				<li class="seven-words">
-					<img class="small-txt" src="images/tit_7.png" alt="">
-				</li>
-				<li class="eight-words">
-					<img class="small-txt" src="images/tit_8.png" alt="">
-				</li>
-				<li class="nine-words">
-					<img class="small-txt" src="images/tit_9.png" alt="">
-				</li>
-				<li class="tit2 ten-words">
-					<img src="images/tit_txt2.png" alt="">
-				</li>
-				<li class="eleven-words">
-					<img class="small-txt" src="images/tit_a.png" alt="">
-				</li>
-				<li class="twelve-words">
-					<img class="small-txt" src="images/tit_b.png" alt="">
-				</li>
-				<li class="thirteen-words">
-					<img class="small-txt" src="images/tit_c.png" alt="">
-				</li>
-				<li class="fourteen-words">
-					<img class="small-txt" src="images/tit_d.png" alt="">
-				</li>
-				<li class="fifteen-words">
-					<img class="small-txt" src="images/tit_e.png" alt="">
-				</li>
-				<li class="sixteen-words">
-					<img class="small-txt" src="images/tit_f.png" alt="">
-				</li>
-			</ul>
+
+	  <!--pulse wave-->
+    <div class="J-load loaerbox">
+
+        <!--colorful pulse-->
+<div id="colorfulPulse">
+  <span class="item-1"></span>
+  <span class="item-2"></span>
+  <span class="item-3"></span>
+  <span class="item-4"></span>
+  <span class="item-5"></span>
+  <span class="item-6"></span>
+  <span class="item-7"></span>
+</div>
+
+
+        <!-- <div class="lode-inside" id="container">
+            <div class="stick"></div>
+            <div class="stick"></div>
+            <div class="stick"></div>
+            <div class="stick"></div>
+            <div class="stick"></div>
+            <div class="stick"></div>
+            <h1>Loading...</h1>
+        </div> -->
+
+        <p class="tip-box">广州港讯网络科技有限公司</p>
+    </div>
+	<div class="about-box J-content disnone">
+		<div class="txt-box J-txtbox">
+			<img class="abo-txt animated fadeInDown"  swiper-animate-effect="fadeInDown" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/about.png">
+			<img class="abo1-txt animated fadeInUp" swiper-animate-effect="fadeInUp" swiper-animate-duration="0.5s" swiper-animate-delay="0.3s" src="images/about_1.png">
 		</div>
-		<div class="back-box"><a href="index.html"><img src="images/back.png" alt="返回"></a></div>
+		<div class="back-box  J-btn"><a href="index.html"><img src="images/back.png" alt="返回"></a></div>
 		
 	</div>
+	<script type="text/javascript" src="js/jquery-1.9.1.min.js"></script>
+	    <script src="js/swiper.animate1.0.3.min.js" type="text/javascript"></script>
+
+	<script type="text/javascript">
+        $(function(){
+        var win_h = $(window).height();
+        // alert(win_h);
+        if(win_h <= 590){
+            // $('.J-btn').css('bottom', '1%');
+            // $('.J-txtbox').css('background-size','90%');
+           
+        }
+
+         window.onload = function() {
+            $('.J-load').css('display', 'none');
+            $('.J-content').removeClass('disnone ');
+
+        }
+    });
+     </script>
 </body>
 </html>
