--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <meta content="yes" name="apple-mobile-web-app-capable" />
     <meta content="black" name="apple-mobile-web-app-status-bar-style" />
     <meta content="telephone=no" name="format-detection" />
-    <title>港迅H5招聘</title>
+    <title>广州港讯网络科技有限公司</title>
+    <meta name="广州港讯网络科技有限公司" data-msg-img="http://www.smartinfo.cn/career/images/sharelogo.png" data-msg-title="广州港讯网络科技有限公司-2018年度招聘信息" data-msg-content="广州港讯网络技术有限公司创立于2011年，是一家专注于用户体验和数字化品牌传播的网络服务机构，以数据驱动为核心，结合营销、内容、创意、技术、研发等多维度，致力于为客户提供全面、丰富的数字化创意创新服务。" />
     <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 
@@ -72,6 +73,9 @@
             $('.J-btn').css('top', '64%');
             $('.J-btnbox').css('background-position', '0 60px');
 
+        }else if(win_h > 648){
+            $('.J-btn').css('top', '70%');
+            $('.J-btnbox').css('background-position', '0 60px');
         }
 
         window.onload = function() {
