--- a/index.html
+++ b/index.html
@@ -73,7 +73,11 @@
             $('.J-btn').css('top', '64%');
             $('.J-btnbox').css('background-position', '0 60px');
 
-        }else if(win_h > 648){
+        }else if( win_h > 591 &&  win_h < 648){
+             $('.J-btn').css('top', '68%');
+        }
+
+        else if(win_h > 648){
             $('.J-btn').css('top', '70%');
             $('.J-btnbox').css('background-position', '0 60px');
         }
