--- a/joinus.html
+++ b/joinus.html
@@ -47,10 +47,10 @@
                     <a class="pic_d animated delay9 fadeInDown" href="emailto:jason@smartinfo.cn"><img src="images/emailadress.png" alt="jason@smartinfo.cn"></a>
                     <img class="pic_e animated delay12 fadeInDown" src="images/emailbox.png" alt="邮筒">
                     <img class="pic_c animated delay15 fadeInDown" src="images/start-right.png">
-                    <img class="pic_f animated delay18 fadeInLeft" src="images/cail.png">
-                    <img class="pic_g animated delay21 fadeInRight"  src="images/cair.png">
+                    <img class="pic_f animated delay15 fadeInLeft" src="images/cail.png">
+                    <img class="pic_g animated delay15 fadeInRight"  src="images/cair.png">
         </div>
-        <a class="backbox J-btnback animated fadeInUp delay24"  href="index.html">
+        <a class="backbox J-btnback animated fadeInUp delay24"  href="job.html">
                     <img  src="images/back.png" alt="返回">
                 </a>
     </div>
